# tg-bot-survey

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  codex  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/app/: __main__.py
backend/app/api/: auth.py  debug.py  health.py  telegram.py  user.py
backend/app/api/processing/: health.py  mailings.py
backend/app/asgi/: app.py
backend/app/asgi/dependence/: security.py
backend/app/asgi/middlewares/: logs.py
backend/app/clients/: base.py  openai.py
backend/app/core/: config.py
backend/app/core/security/: globals.py  token.py
backend/app/db/: __init__.py  config.py
backend/app/di/: __init__.py  container.py  utils.py
backend/app/di/providers/: __init__.py  client.py  interactor.py  repository.py  service.py  session.py  tools.py
backend/app/dto/: debug.py  mailings.py
backend/app/entities/: __init__.py
backend/app/entities/checklist/: __init__.py  enums.py  models.py
backend/app/entities/checklist/schemas/: __init__.py  forms.py
backend/app/entities/mailings/: __init__.py  models.py
backend/app/entities/mailings/enums/: statuses.py
backend/app/entities/mailings/exceptions/: statuses.py
backend/app/entities/mailings/schemas/: base.py
backend/app/entities/settings/: __init__.py  models.py
backend/app/entities/user/: __init__.py  models.py
backend/app/entities/user/enums/: statuses.py
backend/app/entities/user/exceptions/: referrals_system.py  statuses.py
backend/app/entities/user/schemas/: base.py  forms.py  response.py
backend/app/interactors/: base.py  debug.py  mailings.py
backend/app/repositories/: base.py  checklist.py  mailings.py  settings.py  user.py
backend/app/services/: app_settings.py  checklist.py  email.py  employee_import.py  employee_import_config.json  health.py  mailing.py  position_change.py  referral_system.py  telegram.py  telegram_auth.py  user.py
backend/app/shared/: config.py
backend/app/shared/enums/: base.py  group.py  health.py  request.py
backend/app/shared/models/: __init__.py  mixins.py
backend/app/shared/schemas/: base.py  bot.py  health.py  token.py
backend/app/shared/utils/: bg_runner.py  process_runner.py
backend/app/telegram/: config.py  signals.py
backend/app/telegram/callback_data/: __init__.py  admin.py  checklist.py
backend/app/telegram/handlers/: __init__.py  admin.py  checklist.py  commands.py  service_commands.py
backend/app/telegram/keyboards/: admin.py  checklist.py
backend/app/telegram/middlewares/filters/: chat.py  permissions.py
backend/app/telegram/middlewares/outer/: logging.py  user.py
backend/app/telegram/states/: __init__.py  admin.py  checklist.py
backend/app/telegram/utils/links/: enums.py  generator.py  schemas.py
backend/migrations/: env.py
backend/migrations/versions/: 14bfa2294d1e_app_settings.py  27174694155c_add_feedback_to_sessions.py  2f9cf8c70b78_init.py  456bf91b33de_update_employee_active.py  833cc99303a4_checklist_groups.py  9c249c26a9a4_add_checklist_flow.py
scheduler/: pyproject.toml
scheduler/app/: __main__.py
scheduler/app/clients/: backend.py  base.py
scheduler/app/core/: config.py  globals.py  logs.py
scheduler/app/core/security/: globals.py  token.py
scheduler/app/db/: config.py
scheduler/app/tasks/: health.py  mailings.py
scheduler/shared/schemas/: token.py
scripts/: configure_domain.py  import_employees.py  init.sh
