[project]
name = "core"
version = "1.0.0"
description = "Core Features for the project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ruff>=0.12.3",
    "pre-commit>=4.0.0",
]

[tool.ruff]
cache-dir = "~/.cache/ruff"
line-length = 79
exclude = [
    "migrations",
    ".venv",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.ruff.lint]
select = [
    'A',
    'ASYNC',
    'B',
    'BLE',
    'C4',
    'COM',
    'DTZ',
    'E',
    'ERA',
    'EXE',
    'F',
    'FLY',
    'G',
    'I',
    'ICN',
    'ISC',
    'LOG',
    'PERF',
    'PIE',
    'PLC',
    'PLE',
    'PLW',
    'PT',
    'PTH',
    'RET',
    'RUF',
    'S',
    'SIM',
    'T',
    'TRY',
    'UP',
    'W',
    'ARG',
    'N',
    'PL',
    'PLR',
]
extend-select = ["E501"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]
"**/config.py" = []
