[project]
name = "backend-api"
version = "0.1.0"
description = "Backend API"
requires-python = ">=3.12"
authors = [
    { name = "Bogdan Travin", email = "i.fatjuni@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi~=0.115",
    "SQLAlchemy~=2.0",
    "asyncpg~=0.30",
    "alembic~=1.14",
    "lxml~=6.0.0",
    "yarl~=1.20.0",
    "dishka~=1.5",
    "python-jose[cryptography]~=3.3",
    "pydantic~=2.10",
    "pydantic-settings~=2.7",
    "granian[reload]~=2.2",
    "aiogram~=3.17",
    "psycopg2-binary>=2.9.10",
    "lxml-html-clean>=0.4.2",
    "structlog>=25.4.0",
    "rich>=14.0.0",
    "better-exceptions>=0.3.3",
    "colorama>=0.4.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build]
src-layout = false

[tool.hatch.build.targets.sdist]
include = [
    "/app",
    "/migrations",
    "/alembic.ini",
    "/README.md",
    "/pyproject.toml",
]

[dependency-groups]
dev = [
    "ruff>=0.12.3",
]

[tool.ruff]
extend = "../pyproject.toml"
